--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -11,14 +11,17 @@ $successColor: #5e2f63;
 $successTextColor: #FFFFFF;
 $iconFont: 'Material-Design-Iconic-Font';
 $iconFontSize: 21px;
-$textFont: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+$textFont: 'Roboto',
+'Helvetica',
+'Arial',
+sans-serif;
 $textColor: #F0F0F0;
 $labelTextColor: darken($textColor, 25%);
 $labelBackgroundColor: transparent;
 $itemTextColor: $textColor;
 $itemBackgroundColor: rgba($textColor, .025);
 $highlightTextColor: $textColor;
-$highlightBackgroundColor: rgba($textColor, .05);
+$highlightBackgroundColor: rgba($textColor, .075);
 $selectionTextColor: $textColor;
 $selectionBorderColor: transparent;
 $selectionBackgroundColor: rgba($textColor, .1);
@@ -52,6 +55,8 @@ html,
 body {
 	height: 100%; // Make the body fill the browser window.
 	width: 100%;
+	-webkit-user-select: none; // Disable text selection.
+	user-select: none;
 }
 
 h1 {
@@ -182,35 +187,35 @@ iframe {
 }
 
 .tooltip.top .tooltip-arrow {
-  border-top-color: $tooltipBackgroundColor;
+	border-top-color: $tooltipBackgroundColor;
 }
 
 .tooltip.top-left .tooltip-arrow {
-  border-top-color: $tooltipBackgroundColor;
+	border-top-color: $tooltipBackgroundColor;
 }
 
 .tooltip.top-right .tooltip-arrow {
-  border-top-color:$tooltipBackgroundColor;
+	border-top-color: $tooltipBackgroundColor;
 }
 
 .tooltip.right .tooltip-arrow {
-  border-right-color: $tooltipBackgroundColor;
+	border-right-color: $tooltipBackgroundColor;
 }
 
 .tooltip.left .tooltip-arrow {
-  border-left-color: $tooltipBackgroundColor;
+	border-left-color: $tooltipBackgroundColor;
 }
 
 .tooltip.bottom .tooltip-arrow {
-  border-bottom-color: $tooltipBackgroundColor;
+	border-bottom-color: $tooltipBackgroundColor;
 }
 
 .tooltip.bottom-left .tooltip-arrow {
-  border-bottom-color: $tooltipBackgroundColor;
+	border-bottom-color: $tooltipBackgroundColor;
 }
 
 .tooltip.bottom-right .tooltip-arrow {
-  border-bottom-color: $tooltipBackgroundColor;
+	border-bottom-color: $tooltipBackgroundColor;
 }
 
 textarea.disabled,
@@ -232,7 +237,6 @@ input.disabled,
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	transition: all linear .2s;
-	min-width: 100px;
 }
 
 .btn-default .zmdi {
@@ -360,6 +364,10 @@ button:focus,
 	margin-left: 5px;
 }
 
+.btn .btn-label.left {
+	text-align: left;
+}
+
 .nav-tabs {
 	border: none;
 	margin: 0;
@@ -439,11 +447,43 @@ button:focus,
 	border-spacing: 0 3px;
 }
 
+.list-view.list-view-compact {
+	border-spacing: 0 1px;
+}
+
 .list-item {
 	display: table-row;
 	vertical-align: middle;
 	color: $itemTextColor;
 	background: $itemBackgroundColor;
+}
+
+.list-item-unstyled {
+	background: transparent;
+}
+
+.list-item-link {
+	cursor: pointer;
+}
+
+.list-item.drop-target {
+	transition: background linear .25s;
+	background: rgba($highlightBackgroundColor, .015);
+}
+
+.list-item.drop-target-valid {
+	background: $highlightBackgroundColor;
+}
+
+.list-item.selected {
+	background: $selectionBackgroundColor;
+	color: $selectionTextColor !important;
+}
+
+.list-item.selected label,
+.list-item.selected .label,
+.list-item.selected .zmdi {
+	color: $selectionTextColor !important;
 }
 
 .list-item:hover {
@@ -502,6 +542,8 @@ button:focus,
 
 .label,
 .text-label {
+	font-size: 1em;
+	font-weight: normal;
 	color: $labelTextColor;
 }
 
@@ -565,6 +607,7 @@ h4 {
 .subline {
 	margin: .5em 0 2em 0;
 }
+
 
 /* HEADER */
 
@@ -799,7 +842,6 @@ h4 {
 	overflow: hidden;
 }
 
-;
 .scroll-container.layout-fix {
 	padding-left: $scrollbarSize;
 }
@@ -812,34 +854,44 @@ h4 {
 	overflow-y: scroll !important;
 }
 
-.padding-xs.padding-x {
-	padding-left: 5px;
-	padding-right: 5px;
+.padding-x-none {
+	padding-left: 0 !important;
+	padding-right: 0 !important;
 }
 
-.padding-md.padding-x {
-	padding-left: 15px;
-	padding-right: 15px;
+.padding-x-xs {
+	padding-left: 4px !important;
+	padding-right: 4px !important;
 }
 
-.padding-xl.padding-x {
-	padding-left: 30px;
-	padding-right: 30px;
+.padding-x-md {
+	padding-left: 12px !important;
+	padding-right: 12px !important;
 }
 
-.padding-xs.padding-y {
-	padding-top: 5px;
-	padding-bottom: 5px;
+.padding-x-xl {
+	padding-left: 24px !important;
+	padding-right: 24px !important;
 }
 
-.padding-md.padding-y {
-	padding-top: 15px;
-	padding-bottom: 15px;
+.padding-y-none {
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
 }
 
-.padding-xl.padding-y {
-	padding-top: 30px;
-	padding-bottom: 30px;
+.padding-y-xs {
+	padding-top: 4px !important;
+	padding-bottom: 4px !important;
+}
+
+.padding-y-md {
+	padding-top: 12px !important;
+	padding-bottom: 12px !important;
+}
+
+.padding-y-xl {
+	padding-top: 24px !important;
+	padding-bottom: 24px !important;
 }
 
 
@@ -932,6 +984,7 @@ h4 {
 .toolbar .icn-circle {
 	border-radius: 50%;
 }
+
 
 /* ACTIVITIES CHART */
 
@@ -1148,6 +1201,7 @@ svg {
 	transform: scale(1.02);
 }
 
+
 /* CARDS */
 
 .cards {
@@ -1163,7 +1217,7 @@ svg {
 	height: 235px;
 	margin: 0 5px 5px 0;
 	padding: 0;
-	border-radius: 5px;
+	border-radius: 0;
 	background: #262626;
 }
 
@@ -1181,7 +1235,6 @@ svg {
 	height: 100;
 	background: transparent;
 	transition: all ease-in .1s;
-	border-radius: 5px;
 }
 
 .card a:hover {
@@ -1191,7 +1244,7 @@ svg {
 .card .file-thumbnail-container {
 	position: relative;
 	border: none;
-	border-radius: 5px;
+	border-radius: 0;
 	box-shadow: none;
 	width: 100%;
 	height: 201px;
@@ -1200,7 +1253,7 @@ svg {
 }
 
 .card .file-thumbnail {
-	border-radius: 5px;
+	border-radius: 0;
 	width: 100%;
 	height: 100%;
 	background: transparent no-repeat;
@@ -1240,8 +1293,7 @@ svg {
 	padding: 2px;
 	min-width: 30px;
 	text-align: center;
-	border-radius: 0 5px 0 5px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
+	border-radius: 0;
 	color: $windowBackgroundColor;
 }
 
@@ -1792,27 +1844,8 @@ button[disabled]:hover {
 .lst-influences a {
 	display: block;
 	line-height: 22px;
-	vertical-align: middle;
 	margin-bottom: 0 !important;
 }
-
-
-/*
-.lst-influences a .node {
-	display: inline-block;
-	width: 10px;
-	height: 10px;
-	line-height: 10px;
-	margin-left: 8px;
-	margin-right: 8px;
-	text-align: center;
-	vertical-align: middle;
-	background: transparent;
-	background: #E96F02;
-	border-radius: 50%;
-	border: none;
-}
-*/
 
 .lst-influences a i.zmdi {
 	display: inline-block;
@@ -1901,6 +1934,7 @@ button[disabled]:hover {
 	border-left-color: $accentColor;
 }
 
+.no-outline:focus,
 .ctl-history:focus {
 	outline: none;
 }
@@ -2033,8 +2067,8 @@ path.color1 {
 	left: -7px;
 }
 
-.yasgui .yasqe .yasqe_buttons > .yasqe_share,
-.yasgui .yasqe .yasqe_buttons > .fullscreenToggleBtns {
+.yasgui .yasqe .yasqe_buttons>.yasqe_share,
+.yasgui .yasqe .yasqe_buttons>.fullscreenToggleBtns {
 	margin-top: 12px;
 }
 
@@ -2203,6 +2237,7 @@ path.color1 {
 .yasgui ::-webkit-scrollbar-thumb:hover {
 	background: lighten($editorLabelColor, 10%);
 }
+
 
 /* CONNECTION SPINNER */
 
