--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-file-card.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-file-card.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="file-thumbnail-container">
-        <div class="file-thumbnail" style="background-image: url({{t.thumbnailUrl}});"></div>
+        <div class="file-thumbnail"></div>
     </div>
 
     <div class="file-name">{{t.fileName}}</div>
