--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -57,7 +57,7 @@
 					<ul class="nav nav-tabs nav-tabs-top tablist" id="tabs-right" role="tablist">
 						<li role="presentation" class="active"><a data-target="#statistics" role="tab" data-toggle="tab">{{'FILEVIEW.STATISTICS' | translate}}</a></li>
 					</ul>
-					<div class="tab-content padding-md padding-x padding-y">
+					<div class="tab-content padding-x-md padding-y-md">
 						<div role="tabpanel" class="tab-pane fade active in" id="statistics">
 							<art-editing-stats stats="t.selectedInfluence.stats"></art-editing-stats>
 							<art-layer-control layers="t.selectedInfluence.stats.layers"></art-layer-control>
