--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/update-project-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/update-project-dialog.html
@@ -1,25 +1,26 @@
-<div class="row">
-	<div class="col-xs-12">
-		<div class="container padding-xl padding-x padding-y">
-			<h2 class="modal-title">Add Project</h2>
+<form name="projectForm" ng-submit="t.save()">
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="container padding-x-xl padding-y-xl">
+				<h2 class="modal-title">Add Project</h2>
+			</div>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<div class="layout-container padding-xl padding-x">
-			<form name="addProjectForm" ng-submit="t.updateProject()">
-				<input type="text" class="form-control" id="title" name="title" placeholder="Project title" ng-model="t.project.Title" required>
-			</form>
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="layout-container padding-x-xl">
+				<label for="title">Title</label>
+				<input type="text" class="form-control" id="title" name="title" placeholder="Example Project" ng-model="t.project.Title"
+								ng-enter="t.save()" required>
+			</div>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<div class="toolbar pull-right">
-			<button class="btn btn-success" type="submit" ng-click="t.updateProject()" ng-disabled="connectForm.title.$invalid"><i class="zmdi zmdi-check"></i></button>
-			<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="toolbar pull-right">
+				<button class="btn btn-success" type="submit" ng-click="t.save()" ng-disabled="projectForm.title.$invalid"><i class="zmdi zmdi-check"></i></button>
+				<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+			</div>
 		</div>
 	</div>
-</div>
-
+</form>
