--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-project-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-project-list.html
@@ -1,36 +1,56 @@
-
-<div class="ctl-history" tabindex="0">
-    <div style="position: relative; padding: 10px 0 0 0; line-height: 28px; margin-left:15px">
-        <label>Projects</label>
-
-        <ul class="list-unstyled">
-            <li>
-                <a ng-click="t.removeFilter()">
-                <div style="background: #303030; padding: 0 10px;  margin-bottom: 1px;  margin-right: 15px;">
-
-                            All
-                       
+<div class="table-layout no-outline" tabindex="0">
+    <div class="row">
+        <div class="padding-x-md padding-y-md">
+            <ul class="list-view list-view-compact">
+                <li class="list-item list-item-unstyled list-item-link" ng-class="{selected: !t.selectedProject}">
+                    <div class="padding-x-md padding-y-xs" ng-click="t.selectProject(null)">
+                        <span class="label"><i class="zmdi zmdi-view-dashboard" style="margin-right: 5px;"></i> Recent Files</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="padding-x-xl" style="margin-top: 10px; padding-right: 12px !important;">
+            <div class="col expand">
+                <label class="text-uppercase">Projects</label>
+            </div>
+            <div class="col">
+                <a class="btn btn-chromeless padding-sm" ng-click="t.addProject()"><i class="zmdi zmdi-plus"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="row expand">
+        <div class="scroll-container scroll-y layout-fix">
+            <ul class="list-view list-view-compact">
+                <li class="list-item list-item-unstyled list-item-link project-item" ng-repeat="project in t.projectList" ng-click="t.selectProject(project)" ng-class="{selected: t.selectedProject === project}"
+                    ng-model="t.droppedFile" data-drop="true" data-jqyoui-options="{hoverClass: 'drop-target-valid', tolerance: 'pointer'}" jqyoui-droppable="{onDrop: 't.addFileToProject'}">
+                    <div class="padding-x-xl padding-y-none" style="padding-right: 0 !important;">
+                        <div class="col expand">
+                            <span class="label">{{project.Title}}</span>
                         </div>
-                         </a>
-                        </li>
-            <li ng-repeat="project in t.projectList" >
-                 <a ng-click="t.filterBy(project)">
-                <div style="background: #303030; padding: 0 10px;  margin-bottom: 1px;  margin-right: 15px;" data-drop="true" 
-                    data-jqyoui-options 
-                    ng-model="t.droppedFile"
-                    jqyoui-droppable = "{onDrop: 't.addFileToProject'}">
-                       
-                            {{project.Title}}
-                        
-                    <button style="background: transparent; position: absolute; right: 20px; padding: 3px;" class="btn" ng-click="t.updateProject(project)"><i class="zmdi zmdi-wrench"></i></button>
-                </div>
-                </a>
-            </li>
-        </ul>
-        
-        <div class="navbar-fixed-bottom">
-            <div class="col-xs-12">
-                    <button style="margin-bottom:15px" class="btn" ng-click="t.addProject()"><i class="zmdi zmdi-plus"></i></button>
+                        <div class="col">
+                            <div ng-switch="t.isDeleting">
+                                <div ng-switch-when="true">
+                                    <a class="btn btn-chromeless padding-sm" ng-click="t.deleteProject(project)"><i class="zmdi zmdi-close"></i></a>
+                                </div>
+                                <div ng-switch-default>
+                                    <a class="btn btn-chromeless padding-sm" ng-click="t.updateProject(project)"><i class="zmdi zmdi-more"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row text-center">
+        <div ng-switch="t.isDeleting">
+            <div ng-switch-when="true">
+                <a class="btn btn-chromeless" ng-click="t.toggleDelete()"><i class="zmdi zmdi-check"></i></a>
+            </div>
+            <div ng-switch-default>
+                <a class="btn btn-chromeless" ng-click="t.toggleDelete()"><i class="zmdi zmdi-delete"></i></a>
             </div>
         </div>
     </div>
