--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -13,7 +13,7 @@
 		</div>
     </div>
 	<div class="row expand">
-		<div class="layout-container padding-xl padding-y">
+		<div class="layout-container padding-y-xl">
 			<div class="container">
 				<ul class="nav nav-pills border-bottom" role="tablist" id="tabs">
 					<li role="presentation" class="active"><a data-target="#panel-user" role="tab" data-toggle="tab"><span class="icn-container-lg"><i class="zmdi zmdi-account zmdi-lg"></i></span> {{ 'SETTINGS.PROFILE.LABEL' | translate }}</a></li>
@@ -21,7 +21,7 @@
 					<li role="presentation"><a data-target="#panel-accounts" role="tab" data-toggle="tab"><span class="icn-container-lg"><i class="zmdi zmdi-globe-alt zmdi-lg"></i></span> {{ 'SETTINGS.ACCOUNTS.LABEL' | translate }}</a></li>
 				</ul>
 
-				<div class="tab-content padding-xl padding-x padding-y">
+				<div class="tab-content padding-x-xl padding-y-xl">
 					<div role="tabpanel" class="tab-pane fade active in" id="panel-user">
 						<div art-settings-user></div>
 					</div>
