--- a/Journal/app/partials/dialogs/update-project-dialog.html
+++ b/Journal/app/partials/dialogs/update-project-dialog.html
@@ -10,8 +10,7 @@
 		<div class="col-xs-12">
 			<div class="layout-container padding-x-xl">
 				<label for="title">Title</label>
-				<input type="text" class="form-control" id="title" name="title" placeholder="Example Project" ng-model="t.project.Title"
-								ng-enter="t.save()" required>
+				<input type="text" class="form-control" id="title" name="title" placeholder="Example Project" ng-model="t.project.Name" ng-enter="t.save()" required>
 			</div>
 		</div>
 	</div>
