--- a/Journal/app/partials/directives/art-project-list.html
+++ b/Journal/app/partials/directives/art-project-list.html
@@ -27,7 +27,7 @@
                     ng-model="t.droppedFile" data-drop="true" data-jqyoui-options="{hoverClass: 'drop-target-valid', tolerance: 'pointer'}" jqyoui-droppable="{onDrop: 't.addFileToProject'}">
                     <div class="padding-x-xl padding-y-none" style="padding-right: 0 !important;">
                         <div class="col expand">
-                            <span class="label">{{project.Title}}</span>
+                            <span class="label">{{project.Name}}</span>
                         </div>
                         <div class="col">
                             <div ng-switch="t.isDeleting">
