--- a/Journal/app/views/file-preview/file-preview.html
+++ b/Journal/app/views/file-preview/file-preview.html
@@ -12,19 +12,20 @@
 			<div class="col expand">
 				<h5 class="title">{{t.file.label}}</h5>
 			</div>
-			<div class="col">
-				<a id="publish-btn" class="btn btn-header" ng-click="t.publishFile()" uib-tooltip="Publish" tooltip-placement="bottom" tooltip-popup-delay="1000">
-					<i class="zmdi zmdi-hc-fw zmdi-cloud-upload"></i>
-				</a>
-			</div>
-			<div class="col">
-				<a id="export-btn" class="btn btn-header" ng-click="t.exportFile()" uib-tooltip="Export" tooltip-placement="bottom" tooltip-popup-delay="1000">
-					<i class="zmdi zmdi-hc-fw zmdi-archive"></i>
-				</a>
-			</div>
 		</div>
 	</div>
 	<div class="row expand" id="content">
-		<art-file-preview file="{{t.entity.uri}}"></art-file-preview>
+		<div class="layout-container ui-pane-container">
+			<div class="ui-resizable ui-pane ui-pane-left">
+				<div class="pane-content">
+					<art-chat-control entity="{{t.entity.uri}}"></art-chat-control>
+				</div>
+			</div>
+			<div class="ui-resizable ui-pane ui-pane-center">
+				<div class="pane-content">
+					<art-file-preview file="{{t.entity.uri}}"></art-file-preview>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
