Implemented observable viewer commands using command pattern.

--- a/Journal/app/views/file-preview/file-preview.html
+++ b/Journal/app/views/file-preview/file-preview.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="ui-resizable ui-pane ui-pane-center">
 				<div class="pane-content">
-					<art-file-preview file="{{t.entity.uri}}"></art-file-preview>
+					<art-document-viewer file="{{t.entity.uri}}"></art-document-viewer>
 				</div>
 			</div>
 		</div>
